force-app/main/default/objects/Animal_Alert__c/Animal_Alert__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Records alerts or warnings against an Animal</description>
    <label>Animal Alert</label>
    <nameField>
        <displayFormat>ALERT{00000}</displayFormat>
        <label>Animal Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>