force-app/main/default/objects/Animal_Alert__c/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <label>Alert Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>