force-app/main/default/objects/Animal_Alert__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Animal Alerts</relationshipLabel>
    <relationshipName>Animal_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>