force-app/main/default/objects/Animal_Alert__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <inlineHelpText>When will the alert stop showing on the record.</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>