force-app/main/default/objects/Animal_Alert__c/fields/IsDisplayed__c.field-meta.xml
<CustomField>
    <fullName>IsDisplayed__c</fullName>
    <formula>AND(
    Start_Date_Time__c &lt;= NOW(),
    OR(
        End_Date_Time__c &gt;= NOW(),
        ISBLANK(End_Date_Time__c)
    )
)</formula>
    <label>IsDisplayed</label>
    <type>Checkbox</type>
</CustomField>