force-app/main/default/objects/Animal_Alert__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <inlineHelpText>Define the severity of the alert, from High to Low and Information only alerts where you just want to make sure there is an alert for users viewing this record.</inlineHelpText>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Information Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>