force-app/main/default/objects/Animal_Alert__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>The start date and time which the alert is active from.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>