force-app/main/default/objects/Animal_Alert__c/validationRules/Animal_Alert_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Animal_Alert_Date_Check</fullName>
    <active>true</active>
    <description>Checks that the End Date is not less than the start date.</description>
    <errorConditionFormula>End_Date_Time__c &lt;  Start_Date_Time__c</errorConditionFormula>
    <errorMessage>The End Date cannot be less than the start date. Please check the dates you have entered and try again.</errorMessage>
</ValidationRule>